--- a/client/styles/landingpage.css
+++ b/client/styles/landingpage.css
@@ -1,11 +1,11 @@
 html{
-  
+
 }
 
 body {
   font-size: 15px;
   height: 100%;
-  background: url('/images/underwater.jpg') no-repeat center center fixed;
+  background: url('/public/images/underwater.jpg') no-repeat center center fixed;
   margin: 0px;
   padding: 0px;
   text-rendering: optimizeLegibility;
