--- a/client/styles/landingpage.css
+++ b/client/styles/landingpage.css
@@ -52,6 +52,12 @@ h5.ui.header,
   font-weight: bold !important;
 }
 
+.ui.button.playbutton {
+  line-height: 100%;
+  font-size: 1.3em;
+  padding: 25px 85px;
+}
+
 #amber-elk-header {
   color: white;
 }
