About us and fonts update to landing page

--- a/client/styles/landingpage.css
+++ b/client/styles/landingpage.css
@@ -16,6 +16,10 @@ body {
           UI Overrides
 *******************************/
 
+.team {
+  margin-bottom: 50px;
+}
+
 .heart {
   color: white;
 }
